samples/_failures_safe/1761549182_070e3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_551cbf3e.c: In function ‘main’:
./samples/SAFE/__tmp_551cbf3e.c:156:5: error: expected declaration or statement at end of input
  156 |     }
      |     ^
